Stops the text being aligned to the center on a odd menu columns, it didn't match the design.

--- a/less/plugins/plugin-menu.less
+++ b/less/plugins/plugin-menu.less
@@ -131,6 +131,12 @@
 // 3. #Columns
 // -----------------------------
 
+
+// Stops odd columns being aligned to the center
+.odd.bk1-columns {
+	text-align: inherit;
+}
+
 .responsivecolumns {
 
 	.menu-item--featured,
